# mastermind_UCLCDH

./: CMakeLists.txt  slides.html  slides.md  template.html
.github/workflows/: generate_and_deploy.yaml
lib/css/: oxrse.css
